@@ -32,7 +32,7 @@ py_library(
         "//beancount/core:realization",
         "//beancount/parser:options",
         "//beancount/reports:html_formatter",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
         "//beancount/parser:version",
     ],
 )
@@ -47,7 +47,7 @@ py_test(
         "//beancount:loader",
         "//beancount/parser:options",
         "//beancount/reports:base",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
         "//beancount:plugins_for_tests",
     ],
 )
@@ -169,7 +169,7 @@ py_library(
         "//beancount/parser:options",
         "//beancount/parser:printer",
         "//beancount/reports:base",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
     ],
 )
 
@@ -180,7 +180,7 @@ py_test(
         "//beancount:loader",
         "//beancount/ops:holdings",
         "//beancount/reports:holdings_reports",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
         "//beancount:plugins_for_tests",
     ],
 )
@@ -293,7 +293,7 @@ py_library(
         "//beancount/parser:options",
         "//beancount/parser:printer",
         "//beancount/reports:base",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
         "//beancount/reports:tree_table",
         "//beancount/utils:date_utils",
         "//beancount/utils:misc_utils",
@@ -323,7 +323,7 @@ py_library(
         "//beancount/parser:printer",
         "//beancount/reports:base",
         "//beancount/reports:gviz",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
     ],
 )
 
@@ -355,7 +355,7 @@ py_library(
         "//beancount/reports:journal_reports",
         "//beancount/reports:misc_reports",
         "//beancount/reports:price_reports",
-        "//beancount/reports:table",
+        "//beancount/utils:table",
         "//beancount/utils:file_utils",
         "//beancount/utils:misc_utils",
         "//beancount/parser:version",
@@ -374,21 +374,6 @@ py_test(
         "//beancount/utils:test_utils",
         "//beancount:plugins_for_tests",
         "//beancount/plugins:implicit_prices",
-    ],
-)
-
-py_library(
-    name = "table",
-    srcs = ["table.py"],
-    visibility = ["//beancount/plugins:__pkg__"],
-)
-
-py_test(
-    name = "table_test",
-    srcs = ["table_test.py"],
-    deps = [
-        "//beancount/core:number",
-        "//beancount/reports:table",
     ],
 )
 
