@@ -11,7 +11,7 @@ from beancount.core.number import D
 from beancount.core import realization
 from beancount.core import display_context
 from beancount.reports import base
-from beancount.reports import table
+from beancount.utils import table
 from beancount.parser import options
 from beancount import loader
 
