@@ -6,8 +6,8 @@ import collections
 import textwrap
 import unittest
 
-from beancount.core.number import D
-from beancount.reports import table
+from decimal import Decimal
+from beancount.utils import table
 
 
 class TestTable(unittest.TestCase):
@@ -20,9 +20,9 @@ class TestTable(unittest.TestCase):
         Tup = collections.namedtuple('Tup', 'country capital currency amount')
 
         tuples = [
-            Tup("Malawi", "Lilongwe", "Kwacha", D("0.111")),
-            Tup("Mali", "Bamako", "CFA franc", D("0.222")),
-            Tup("Mauritania", "Nouakchott", "Ouguiya", D("0.333")),
+            Tup("Malawi", "Lilongwe", "Kwacha", Decimal("0.111")),
+            Tup("Mali", "Bamako", "CFA franc", Decimal("0.222")),
+            Tup("Mauritania", "Nouakchott", "Ouguiya", Decimal("0.333")),
             ]
         table_object = table.create_table(
             tuples, ["country",
